@@ -1,8 +1,12 @@
 DIST gitaly-0.10.0.tar.bz2 693273 SHA256 44a4a68beb75b464b35fd003cf47a9bc483bb6bbcc8ab4bd4ef87a75329a3747 SHA512 1d7b2d38d68ceaacde03d0ba2cbec19f730527af6a0d56fd92c03f41a4d11c4e5db5c5cc2bd363a8ccfc0f5bf3fb678aec4b17e5996ccc7f1898a78e4598cc1a WHIRLPOOL 737ff05c6992e90eab9ba38a721cf699d87ea1ef84005dbaa16d37ef3c33cec9607571b0421412bba3efd2bf88267ff7d624e57ac92cc08b14c3b8801779c455
+DIST gitaly-0.11.0.tar.bz2 1446943 SHA256 fe4b57fbc05038eb297fa650dd41c1ae6049fc974f43aa7b4993f500627d9e5c SHA512 396d680b66812a7be1dfb9d54d24c0b06c5b70b7bc94c9cc4de8c5e7ccc875682efafa063370d1b2e352458e8bc24db77ca7ad127e4c5af37e5e6c415ce3a7ac WHIRLPOOL 6050a67cb97c9f4072ae81a5c5364bd910c15f54853e974e7f62fee8a95ca9c38ed1fc550f4df71fbecd8b314aacad77cf24b67fcd6bf340c68a3db3fe74854c
+DIST gitaly-0.11.2.tar.bz2 1465321 SHA256 4273842b37e2cde3d09a60209ff11cec3f235ebcef304d9c90e9e8aabb8691ed SHA512 a59e6786ff2e8f90a26303c7c74a78b0e96bf948f5f3a51a92799a63fb9489cefe95c4d19a9ab86ab37bbc7ff82b94dba844a3b45bba40e9c03bddda261f26d6 WHIRLPOOL 820c1a371051b1ae06c07895c7c5dfa59680785608f238bc6a1729f9d87949d62768a7eb76a09a66f33c962231a108628ff710cbd4b924f798d0c3356686faab
 DIST gitaly-0.3.0.tar.bz2 621097 SHA256 60404ae78b6551e7258a30fa615d7d8c200b84f161ecf904e034db3839391766 SHA512 ad50d15f4a97bf5dd2cc64830840041d8537bd251176eb8964cda3fdb6ef6e1bf3c8b7773516c6e1d51005cc0a718a1bc3ca95fc9ee5d0826c3f9690e1235bb6 WHIRLPOOL 364cdc3407d5fef6ac48a67f8bdd477b75300069be2cbf2567aa73ea7406256ea3c15a27c7a13f92d17c6b63f5923d4e737437bdd3a1e8b808de1832cc9c1af8
 DIST gitaly-0.6.0.tar.bz2 687192 SHA256 ead87c0da129c075011a55e5b2138febf11fd5146dd62763fc9d4b5d8725840d SHA512 f1e8e337192af02b42087604eb90fab3af73ef3753a07af368b1784462a0c1f8b1d166952b8d4e9c25c93228625195be42b4d3dfad0a70bea0520956acf2522f WHIRLPOOL 283899fb6c3fed332731d06ea42cf76ee5de433849b0784eb78b76391d15ca5feeb36fa9d28f3a90962f378c1c485eb0653a62090dbb6aae8bc87965d534da34
 EBUILD gitaly-0.10.0.ebuild 1593 SHA256 34636529bd1a4523d246062b7218c99b495efd2420287b975bcf6049a1da63ab SHA512 fabbe8f46bf84198d594b3601219996def2461eba6237144cbcc73d71659b3cd29c14487a8bf3cfb3de4c5dafbb93bb9d51ade907ffc76e88bccf22bf7a1859d WHIRLPOOL c6b59a27626121cb5a88aa14f9159edeec6f4e69b9a64851a21c0a9826d00010283a218767090825452abb4ad6ba47381e57b2665c6ef4511224edbf7b988e6e
+EBUILD gitaly-0.11.0.ebuild 1595 SHA256 d1431b825cc5d1c3f36d2626298093a6e99fbf2f4704c8089050f85061950043 SHA512 902de6ab0911bee3389f5ef0854419be228070952b65a94e6277c9b22babee6cc9ab77c24007b94dfb51e9014c891c74d4e7723188a6ce58b6e2d187bb4b9b12 WHIRLPOOL 2a8f2a8c6a6361586bc1871d8b8b217b65f827828f6adb3eee56bb4c30d39bd6c9a6b01fb91adf42f870b070e405187f49867237473995c1b338178b96399279
+EBUILD gitaly-0.11.2.ebuild 1595 SHA256 5844c1a6ec52bfae6115786b7311fac3d71dddcab168fba2f27ab237a1e64779 SHA512 acada469faebe85b38e06ecbf180bb99574a839beefa9bdb922b4f73d836c4ab76b05a84964acf9d5bf13aa42defcd0cff7f6c4aefca0c3bb6ea017bfae54643 WHIRLPOOL 5f7dec3007330df462761eb6a73e28f07d954e0095e2033edce7b507a93dc71b62b55272387c0581e926cdffc75345c43a1681a201f8dfb4ad013f1805a1ed49
 EBUILD gitaly-0.3.0.ebuild 1593 SHA256 f07387ac6ec3c68d2c4aa8894804caf5a456b8e12e15937d82fda4d2ed864185 SHA512 95d19b0e799195fa5e3d8cc2879c1017503f68aa586a074119441fbbcff28d2cd9d538830a3a2b40a542bdbfa99518f9afd09232907ac7e763d500cf00abe32f WHIRLPOOL 1e3c778ac33e385865a610dfef5ee07841e9a7b91800b94a3a88714caf38084584524b2f120553a9f13ee2df57309fbd8e9b1e119cdbfd2f6cc1749e25f14bcf
 EBUILD gitaly-0.6.0.ebuild 1593 SHA256 34636529bd1a4523d246062b7218c99b495efd2420287b975bcf6049a1da63ab SHA512 fabbe8f46bf84198d594b3601219996def2461eba6237144cbcc73d71659b3cd29c14487a8bf3cfb3de4c5dafbb93bb9d51ade907ffc76e88bccf22bf7a1859d WHIRLPOOL c6b59a27626121cb5a88aa14f9159edeec6f4e69b9a64851a21c0a9826d00010283a218767090825452abb4ad6ba47381e57b2665c6ef4511224edbf7b988e6e
-MISC ChangeLog 392 SHA256 c85d6fb8a93d47762d1a6279f7523138234a5951a71700a0abb5bd6c69405704 SHA512 ff7a8dc6e0457f88e22c93ae062fb7c4da834cf679e0742f276465060164dbb510573b55bab7471ae851e5380cc60fece093ef973d4c0da4413ce0f8f3c99263 WHIRLPOOL d3b4cf6e3182e5be74aa8689b2ea5b3baf53bbf2ff2ad56bc60429d89627aad8d148877c285cc1ed0e8960ad5e02344901c3554e7e78c2e2a3a1fca9c5533825
+MISC ChangeLog 605 SHA256 e8f35a4f363611ca88e331ac79ddabe7e6a140d543c405e3f02d343eb7c26c9b SHA512 eff343fb288297aad8ed17a28f00c1365870a8707a38d5ff0c57ed5c84c6942129165f3522ae34df1066729c25b5946dbd6ce8a7f8e68cfd3ffe39f492539bc7 WHIRLPOOL 45361d6dc967150d3bf4cc27733126654b30f6f71fdbb97603c9a995762f6713a277fe3ceb11b1afe38f3c8377238c2e2f70716b84d40b5ca2e8b3842a275f16
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
